<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsSignIn">Signin</string>
    <string name="tData">DataAnda</string>
    <string name="tHasilEmail">Ini Hasil Email</string>
    <string name="tHasilPassword">Hasil Password</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="erePass">Masukkan Password lagi</string>
    <string name="eAlamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telpon</string>

</resources>